completed user login and signup and admin login with authentication.

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -30,8 +30,16 @@
 }
 
 .logo-div{
-    background-image: url(../../../assets/images/MATRIFY-removebg-preview.png);
+    background-image: url("../../assets/images/logo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.nav-profile-icon{
+    background-image: url("../../assets/images/profile.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
