--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -5,8 +5,9 @@
     transform: translate(-50%, -50%);
     background-color: #f2f2f2;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    width:35vw;
-    height: 65vh;
+    height: fit-content;
+    min-width: 30rem;
+    padding-bottom: 30px;
     border-radius: 20px;
     outline: none;
 }
@@ -27,7 +28,7 @@
     justify-content:flex-start;
     align-items: center;
     z-index: 100;
-    background-color: rgba(0, 0, 0, 0.633);
+    background-color: rgba(0, 0, 0, 0.89);
   }
   
   
