--- a/src/pages/admin/Home/Home.css
+++ b/src/pages/admin/Home/Home.css
@@ -2,3 +2,7 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
     background-color: #F4F7F9;
 }
+
+.profile:hover + .email{
+    display: block;
+}
