--- a/src/pages/user/Login/Login.css
+++ b/src/pages/user/Login/Login.css
@@ -10,7 +10,7 @@
 }
 
 .form-container input{
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
 }
 
 .login-card-container{
