--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,8 +5,7 @@
 
 .nav {
     height: 11vh;
-    width: 100vw;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 
