--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,10 +1,12 @@
 .sidebar{
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+
+    border-right: 1px solid #00000020;
 }
 
 .active {
-    background-color: #f0f0f0; 
-    padding-top: 10px;
-    padding-bottom: 10px;
+    background-color: #E8C68F; 
+    color: aliceblue;
     border-radius: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
