--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,75 @@
     font-family: "gillroy";
     src: url("../../../assets/fonts/gilroy/Gilroy-Regular.ttf");
 }
+
+:root{
+    --background-color: #f6f6f6;
+    --foreground-color: #003cff;
+    --primary-text-color: #0a0a0a;
+    --secondary-text-color: #ffffff;
+
+}
+
+.toggle {
+    position: relative;
+    box-sizing: border-box;
+}
+.toggle input[type="checkbox"] {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0;
+}
+.toggle label {
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+.toggle label:before {
+    content: "";
+    width: 55px;
+    height: 30px;
+    background: #fff;
+    border: 1px solid #ddd;
+    box-shadow: inset -30px 0 0 #666;
+    position: relative;
+    display: inline-block;
+    border-radius: 22px;
+    box-sizing: border-box;
+    transition: 0.2s ease-in;  
+}
+
+.toggle label:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 5px;
+    top: 7px;
+    border-radius: 50%;
+    background: #fffdfd;
+    box-shadow: inset -8px -5px #333;
+    transition: 0.2s ease-in-out;
+}
+
+.toggle input[type="checkbox"]:checked + label:before {
+    box-shadow: inset 30px 0 0 #DFE5E7;
+}
+.toggle input[type="checkbox"]:checked + label:after {
+    box-shadow: inset 0 0 0 1px #fff;
+    background: #ffbc00;
+    left: 34px;
+    top: 8px;
+    border: 2px dashed #fff;
+}
+
+[dark-theme] {
+    --background-color: #0a0a0a;
+    --foreground-color: #567aff;
+    --primary-text-color: #ffffff;
+    --secondary-text-color: #0a0a0a;
+}
+  
