--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -6,10 +6,10 @@
     background-color: #f2f2f2;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     height: fit-content;
-    min-width: 30rem;
-    padding-bottom: 30px;
+    min-width: 20rem;
     border-radius: 20px;
     outline: none;
+    overflow: hidden;
 }
 
 @media (max-width: 768px) {
@@ -30,5 +30,4 @@
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.89);
   }
-  
   
