--- a/src/pages/admin/Home/Home.css
+++ b/src/pages/admin/Home/Home.css
@@ -19,3 +19,14 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
+.payment-tabs{
+    box-shadow: rgba(10, 10, 10, 0.1) 0px 1px 0px;
+    color: rgba(31, 31, 30, 0.776);
+}
+.payment-tabs button{
+    width: 10rem;
+}
+.active-tab{
+    border-bottom: 5px solid #8e8b85;
+    padding-bottom: 5px;
+}
