--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -4,6 +4,10 @@
 table {
     width: 100%;
     border-collapse: collapse;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    overflow: hidden;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
   }
   
   th, td {
@@ -12,7 +16,7 @@ table {
   }
   
   th {
-    background-color: #F3F6F7;
+    background-color: #f2eade;
     color: #333;
     font-weight: bold;
   }
