--- a/src/pages/admin/Home/Home.css
+++ b/src/pages/admin/Home/Home.css
@@ -21,12 +21,15 @@
 
 .payment-tabs{
     box-shadow: rgba(10, 10, 10, 0.1) 0px 1px 0px;
-    color: rgba(31, 31, 30, 0.776);
+    color: rgba(128, 128, 128, 0.885);
+}
+.payment-tabs :focus{
+    color: gray;
 }
 .payment-tabs button{
     width: 10rem;
 }
 .active-tab{
-    border-bottom: 5px solid #8e8b85;
+    border-bottom: 5px solid #E7C68F;
     padding-bottom: 5px;
 }
