--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -10,6 +10,7 @@
     border-radius: 20px;
     outline: none;
     overflow: hidden;
+    transition: 1s all;
 }
 
 @media (max-width: 768px) {
@@ -29,5 +30,6 @@
     align-items: center;
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.89);
+    transition: 1s all;
   }
   
