--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,22 +1,37 @@
+.menu-item {
+  border-bottom: 1px solid #eaeaea;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease
+}
+
+.chat-menu-header {
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
 .message-send-message-container {
     max-width: 400px;
     overflow-wrap: break-word;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
 }
 
 
 .message-receive-message-container {
     max-width: 400px;
     overflow-wrap: break-word;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
 }
   
 .message-container {
-    background-image: url("https://github.com/sayand-ak/static_images/blob/main/MATRIFY-removebg-preview%20(1).png");
+    /* background-image: url("../../../src/assets/images/8c98994518b575bfd8c949e91d20548b.jpg"); */
     background-size: cover;
     background-position: center;
-    background-color: #fbfaf8;
+    background-repeat: no-repeat;
     overflow-y: auto;
     height: 80vh; /* Adjust as needed */
-    padding-bottom: 50rgba(227, 224, 218, 0.802)
+    padding-bottom: 50;
+    background-color: #F9F6EE;
+
 }
 
 .message-content {
@@ -44,4 +59,42 @@
 
 .message-input{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.more-options-div {
+  position: absolute;
+  top: -125px;
+  right: 6.3rem;
+  width: 60px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  height: 0;
+  transition: height 0.3s ease-in;
+  background: #F0F3F4;
+  transition: height 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+}
+
+.show-options {
+  height: 150px;
+}
+
+.send-image-preview{
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+}
+
+.rotate-90 {
+  transform: rotate(180deg);
+  transition: transform 0.3s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.065);
+  border-radius: 50%;
+}
+
+.rotate-0 {
+  transform: rotate(0deg);
+  transition: transform 0.3s ease-in-out;
 }
