--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,12 +1,8 @@
-@font-face {
-    font-family: "font-btn";
-    src: url('./assets/fonts/Work_Sans/WorkSans-VariableFont_wght.ttf') format('truetype'); ;
-}
 
-.nav {
+.navbar {
     z-index: 100;
     height: 11vh;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
 
 
@@ -17,7 +13,7 @@
     border-radius: 25px;
 }
 
-.nav button{
+.navbar button{
     border-radius: 25px;
     font-family: "font-btn";
     font-weight: 500;
@@ -25,7 +21,7 @@
     color: #454545;
 }
 
-.nav button:hover{
+.navbar button:hover{
     background-color: #e6eaec;
 }
 
