--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
     z-index: 100;
     height: 11vh;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
 
 
@@ -38,6 +38,6 @@
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-    opacity: 0.8;
+    opacity: 1;
 }
 
