--- a/src/pages/user/ViewAllMatches.ts/viewAllMatches.css
+++ b/src/pages/user/ViewAllMatches.ts/viewAllMatches.css
@@ -1,5 +1,5 @@
 .view-matches-header{
-    background-image: url("../../../src/assets/images/copy-space-groom-accessories.jpg");
+    background-image: url("/images/copy-space-groom-accessories.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
