--- a/src/pages/user/Profile/Profile.css
+++ b/src/pages/user/Profile/Profile.css
@@ -1,5 +1,5 @@
 .progress-card{
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 
