--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -34,14 +34,14 @@
 }
 
 .logo-div{
-    background-image: url("../../assets/images/logo.png");
+    background-image: url("/images/logo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .nav-profile-icon{
-    background-image: url("../../assets/images/profile.png");
+    background-image: url("/images/profile.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
