--- a/src/components/FilterSlider/filterSlider.css
+++ b/src/components/FilterSlider/filterSlider.css
@@ -1,1 +1,18 @@
-    
+.filter-button {
+    /* Normal button styles */
+    padding: 10px;
+    margin: 5px;
+    width:150px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.044);
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.filter-button.active {
+    /* Styles for the active button */
+    background-color: #F7F6F2;
+    color: black;
+    font-weight: bold;
+}
