--- a/src/components/FeedbackSlider/Feedback.css
+++ b/src/components/FeedbackSlider/Feedback.css
@@ -1,18 +1,3 @@
-.feedbackCard {
-    min-width: 200px; /* Adjust size as needed */
-    height: 300px; /* Adjust size as needed */
-  }
-  
-  .scroll-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 24px;
-  }
-  
-  .scroll-button:hover {
-    background-color: #00cea8;
-  }
-  
+.feedbackCard{
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
