--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,8 +1,8 @@
 
 .navbar {
     z-index: 100;
-    height: 11vh;
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    height: 10vh;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 
