--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,7 +1,7 @@
 
 .navbar {
     z-index: 100;
-    height: 10vh;
+    height: 12vh;
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
@@ -34,8 +34,8 @@
 }
 
 .logo-div{
-    background-image: url("/images/logo.png");
-    background-size: cover;
+    background-image: url("/images/matriim-01.png");
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
