Changed landing UI

--- a/src/pages/user/Landing/Landing.css
+++ b/src/pages/user/Landing/Landing.css
@@ -1,6 +1,6 @@
 
 .images{
-    background-image: url(/public/images/banner_new.jpg);
+    background-image: url(/images/banner_new.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
