Changed landing UI

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -7,7 +7,7 @@
 }
 
 .images{
-    background-image: url(/public/images/3298288.jpg);
+    background-image: url(/images/3298288.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
