--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -10,6 +10,7 @@
     background-image: url(/images/3298288.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 @media (max-width: 700px) {
