--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -4,7 +4,7 @@
 }
 
 .active {
-    background-color: #B691C2; 
+    background-color: #b691c2de; 
     color: aliceblue;
     border-radius: 30px;
     margin-left: 5px;
